tests/NormalTests/paczka1/small_fuzzy/16677586.err
Error in line 2: dfCXb86PZ A151 <,9
Error in line 11: dfCXb:6PZ S662 34,3
